cmake_minimum_required(VERSION 3.12)
project(asio-kcp)
add_subdirectory(libs/kcp)
add_library(asio-kcp INTERFACE)
target_include_directories(asio-kcp INTERFACE libs/kcp libs/boost include)
target_link_libraries(asio-kcp INTERFACE kcp)
add_executable(test_s tests/server.cpp)
target_link_libraries(test_s asio-kcp ws2_32)
add_executable(test_c tests/client.cpp)
target_link_libraries(test_c asio-kcp ws2_32)
